# moonbase

./: .codeclimate.yml  .gitignore  .travis.yml  LICENSE  README.md  moonbase-core.cabal  moonbase.cabal  test-moonbase
src/: Main.hs  Moonbase.hs  Moonbase.hs-boot  moonbase.hs
src/Moonbase/: Cli.hs  Core.hs  DBus.hs  Desktop.hs  DisplayManager.hs  Hook.hs  Item.hs  Log.hs  Panel.hs  Preferred.hs  Service.hs  Theme.hs  Util.hs  WindowManager.hs  Workspace.hs
src/Moonbase/Desktop/: Generic.hs
src/Moonbase/Service/: Generic.hs
src/Moonbase/Util/: Application.hs  ErrorT.hs  Process.hs  TH.hs  Trigger.hs
src/Moonbase/WindowManager/: Generic.hs  XMonad.hs
src/Moonbase/WindowManager/XMonad/: Default.hs  Impl.hs
test/Moonbase/: CliSpec.hs  CoreSpec.hs  DBusSpec.hs  FakeSpec.hs  ThemeSpec.hs
test/Test/: Fake.hs
