name:                moonbase
version:             0.1.0.0
synopsis:            Desktop environment in a haskell file
description:         Please see README.md
homepage:            http://github.com/felixsch/moonbase
license:             GPL-3
license-file:        LICENSE
author:              Felix Schnizlein
maintainer:          felix@schnizle.in
copyright:           2016 Felix Schnizlein
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Moonbase
                     , Moonbase.Core
                     , Moonbase.Cli
                     , Moonbase.DBus
                     , Moonbase.Theme
                     , Moonbase.Util.TH

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
         , lens
         , text
         , containers
         , transformers
         , mtl
         , stm
         , directory
         , filepath
         , time
         , process
         , dyre
         , dbus
         , vector
         , optparse-applicative
         , template-haskell

         -- this is only here to make atoms haskell-ide happy
         , hspec
         , hspec-expectations
         , HUnit

executable moonbase
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base

         , lens
         , text
         , containers
         , transformers
         , mtl
         , stm
         , directory
         , filepath
         , time
         , process
         , dyre
         , dbus
         , vector
         , optparse-applicative
         , template-haskell
         
                     , moonbase
  default-language:    Haskell2010

test-suite hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HSpec.hs
  build-depends:       base
                     , lens
                     , mtl
                     , stm
                     , dbus
                     , containers
                     , hspec
                     , hspec-expectations
                     , HUnit
                     , QuickCheck
                     , vector
                     , moonbase

  default-language:    Haskell2010
  other-modules:       Moonbase.CoreSpec
                     , Moonbase.ThemeSpec
                     , Moonbase.CliSpec
                     , Moonbase.DBusSpec
                     , Test.Fake

source-repository head
  type:     git
  location: https://github.com/felixsch/moonbase
